<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>nz.cri.gns.fred</groupId>
        <artifactId>fred-top</artifactId>
        <version>3.2.31.146</version>
    </parent>
    <groupId>nz.cri.gns</groupId>
    <artifactId>fred</artifactId>
    <packaging>war</packaging>
    <version>3.2.31.146</version>
    <name>Fossil Record Electronic Database</name>
    <url>http://fred.org.nz</url>  
    <organization>
        <name>GNS Science Ltd</name>
        <url>http://www.gns.cri.nz</url>
    </organization>
    <description>FRED main webapp </description>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Required to show the build date in the desired format -->
        <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>    
        <build.display.date>${maven.build.timestamp}</build.display.date>        
    </properties>     
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <showDeprecation>true</showDeprecation>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <tagNameFormat>RELEASE_@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
            <plugin>
                <!--testing--> 
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.7.1</version>
                <configuration>
                    <skip>false</skip>
                </configuration>
            </plugin>
            <plugin>
                <!--packaging-->   
                <artifactId>maven-war-plugin</artifactId>
                <version>2.6</version>
                <configuration>
                    <attachClasses>false</attachClasses>                            
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>1.3.1</version>
            </plugin>
            <plugin>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <id>default-jar</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <!-- Exclude the FredStart class package from
                                 the jar file, so it doesn't get picked up
                                 and used by NPC -->
                            <classifier>classes</classifier>                            
                            <excludes>
                                <exclude>/nz/cri/gns/fred/*FredStart*</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>            
        </plugins>
        <finalName>fred</finalName>
    </build>
    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
            <version>3.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet.jsp</groupId>
            <artifactId>javax.servlet.jsp-api</artifactId>
            <version>2.3.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.lowagie</groupId>
            <artifactId>itext</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>net.sf</groupId>
            <artifactId>hibernate</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>nz.cri.gns.online-servlet</groupId>
            <artifactId>online-servlet-core</artifactId>
            <version>3.1.81.636</version>            
        </dependency>
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache</artifactId>
            <version>1.5.0</version>
        </dependency>
        <dependency>
            <groupId>commons-pool</groupId>
            <artifactId>commons-pool</artifactId>
            <version>1.5.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>odmg</groupId>
            <artifactId>odmg</artifactId>
            <version>3.0</version>
        </dependency>
        <dependency>
            <groupId>dom4j</groupId>
            <artifactId>dom4j</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>cglib</groupId>
            <artifactId>cglib</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-cglib-repack</artifactId>
            <version>2.1_3</version>
        </dependency>
        <dependency>
            <groupId>javax.transaction</groupId>
            <artifactId>jta</artifactId>
            <version>1.1</version>
        </dependency>
<!--        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>3.12</version>
        </dependency>
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>3.12</version>
        </dependency>-->
        <dependency>
            <groupId>org.geotools</groupId>
            <artifactId>gt-main</artifactId>
            <version>2.6.4</version>
        </dependency>
        <dependency>
            <groupId>com.vividsolutions</groupId>
            <artifactId>jts</artifactId>
            <version>1.10</version>
            <type>jar</type>
        </dependency>
<!--        <dependency>
            <groupId>nz.cri.gns.authservice</groupId>
            <artifactId>auth</artifactId>
            <version>3.2.1.106</version>
            <classifier>classes</classifier>
        </dependency>-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-csv</artifactId>
            <version>1.2</version>
        </dependency>
        <dependency>
            <groupId>com.googlecode.owasp-java-html-sanitizer</groupId>
            <artifactId>owasp-java-html-sanitizer</artifactId>
        <version>20180219.1</version>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>jenkins-build</id>
            <build>
                <plugins>
                    <!-- Plugin used to insert version and date into page footer -->
                    <plugin>
                        <groupId>com.google.code.maven-replacer-plugin</groupId>
                        <artifactId>replacer</artifactId>
                        <version>1.5.3</version>
                        <executions>
                            <execution>
                                <phase>prepare-package</phase>
                                <goals>
                                    <goal>replace</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <includes>
                                <include>${project.basedir}/src/main/webapp/index.jsp</include>
                                <include>${project.build.directory}/classes/fred.properties</include>
                            </includes>                             
                            <replacements>
                                <replacement>
                                    <token>PROJECT_VERSION</token>
                                    <value>${project.version}</value>
                                </replacement>
                                <replacement>
                                    <token>BUILD_DATE</token>
                                    <value>${build.display.date}</value>
                                </replacement>
                            </replacements>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>        
    </profiles> 
    <scm>
        <connection>scm:svn:svn+ssh://jenkins@repo/repo/applications/FRED/trunk/fred-main-webapp</connection>
        <developerConnection>scm:svn:svn+ssh://jenkins@repo/repo/applications/FRED/trunk/fred-main-webapp</developerConnection>
        <url>scm:svn:svn+ssh://jenkins@repo/repo/applications/FRED/trunk/fred-main-webapp</url>
    </scm>
    <distributionManagement>
        <repository>
            <id>central</id>
            <name>GNS Private Repository</name>
            <url>http://repo.gns.cri.nz/artifactory/libs-releases-local</url>
        </repository>
        <snapshotRepository>
            <id>snapshots</id>
            <name>libs-snapshots</name>
            <url>http://repo.gns.cri.nz/artifactory/libs-snapshots-local</url>
        </snapshotRepository>
    </distributionManagement>
</project>
